<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ellipse_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150sdp"
            android:contentDescription="@string/ellipse_2"
            android:src="@drawable/ellipse_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_37sdp"
            android:layout_marginTop="@dimen/_253sdp"
            android:contentDescription="@string/ellipse_3"
            android:src="@drawable/ellipse_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_199sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            android:contentDescription="@string/ellipse_6"
            android:src="@drawable/ellipse_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_113sdp"
            android:contentDescription="@string/ellipse_7"
            android:src="@drawable/ellipse_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_31sdp"
            android:contentDescription="@string/image_1"
            android:src="@drawable/image_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_55sdp"
            android:contentDescription="@string/image_3"
            android:src="@drawable/image_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_101sdp"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/image_4"
            android:src="@drawable/image_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rectangle_188"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_254sdp"
            android:layout_marginEnd="@dimen/_82sdp"
            android:contentDescription="@string/rectangle_188"
            android:src="@drawable/rectangle_188"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_1_title"
        android:textSize="@dimen/_17ssp"
        android:fontFamily="@font/inter_medium"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/constraintLayout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title_color" />

    <TextView
        android:id="@+id/textSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/design_1_subTitle"
        android:textAlignment="center"
        android:textColor="@color/subtitle_color"
        android:textSize="@dimen/_13ssp"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSubTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/button_color"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_medium"
        android:longClickable="true"
        android:padding="@dimen/_13sdp"
        android:text="@string/buttonText_getStarted"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <View
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/black"/>
</RelativeLayout>