<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_80sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_1_4_title"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/design_1_4_subtitle"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/design_1_4_subtitle_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:foreground="@drawable/border"
            app:cardCornerRadius="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp">
                <ImageButton
                    android:contentDescription="@string/design_1_4_message_icon_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/message_icon"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:background="@color/transparent" />
                <EditText
                    android:autofillHints="emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:hint="@string/design_1_4_email_hint"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/transparent"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:foreground="@drawable/border"
            android:layout_marginTop="@dimen/_12sdp"
            app:cardCornerRadius="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp">
                <ImageButton
                    android:contentDescription="@string/design_1_4_password_icon_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password_icon"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:background="@color/transparent" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:hint="@string/design_1_4_password_hint"
                    android:backgroundTint="@color/transparent"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/design_1_4_forgot_password"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_18sdp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/button_color"
            android:paddingVertical="@dimen/_13sdp"
            android:text="@string/design_1_4_button_login_text"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_18sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/design_1_4_continue_text"
            android:textAlignment="center"
            android:textColor="@color/subtitle_color" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:backgroundTint="@color/dark_orange">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_14sdp"
                android:gravity="center">
                <ImageButton
                    android:contentDescription="@string/design_1_4_google_icon_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_2"
                    android:background="#00000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="17sp"
                    android:text="@string/design_1_4_button_google_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_1_4_account"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/inter_medium"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_1_4_signup"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginStart="@dimen/_5sdp"
            android:textStyle="bold"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>