<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/top_background_color">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_0_3"
            android:contentDescription="@string/design_3_photo"
            android:paddingVertical="@dimen/_45sdp"/>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="127dp"
        android:layout_height="4dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_3_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:fontFamily="@font/proxima_bold"
        android:textSize="@dimen/_22ssp"
        android:layout_marginTop="@dimen/_40sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_3_subtitle"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_45sdp"
        android:textColor="@color/design_3_subtitle"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_28sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/design_3_button_color"
        android:fontFamily="@font/inter_medium"
        android:padding="@dimen/_8sdp"
        android:text="@string/buttonText_getStarted"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_32sdp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_3_account_text"
            android:textColor="@color/design_3_account_text_color"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_10ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_3_account_text_color"
            android:text="@string/design_3_account_subText"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

</LinearLayout>